# muDock

./: .clang-format  .gdb_history  .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/src/: command_line_args.cpp  command_line_args.hpp  main.cpp
chem/: autodock_babel_types.json  autodock_types.json  bonds.json  periodic_table.json
cmake/: prerequisite.cmake
mudock/: CMakeLists.txt
mudock/include/mudock/: batch.hpp  chem.hpp  compute.hpp  controllers.hpp  cpp_implementation.hpp  cpp_kernels.hpp  cuda_implementation.hpp  cuda_kernels.hpp  devices.hpp  format.hpp  grid.hpp  hip_implementation.hpp  kernel.hpp  kernels.hpp  knobs.hpp  log.hpp  molecule.hpp  mudock.hpp  omp_implementation.hpp  parallel.hpp  splitter.hpp  sycl_implementation.hpp  type_alias.hpp  utils.hpp
mudock/include/mudock/chem/: apply_autodock_force_field.hpp  assign_autodock_babel_types.hpp  assign_autodock_types.hpp  autodock_babel_types.hpp  autodock_parameters.hpp  autodock_protein.hpp  autodock_types.hpp  bond_types.hpp  cleanup.hpp  elements.hpp  grid_const.hpp  mehler_solmajer.hpp
mudock/include/mudock/compute/: device_names.hpp  parse_ids.hpp  reorder_buffer.hpp  threadpool.hpp
mudock/include/mudock/controllers/: cpp_manager.hpp  cpp_thread_pool.hpp  manager.hpp  squeue.hpp  thread_pool.hpp  worker.hpp
mudock/include/mudock/cpp_implementation/: calc_energy_cpp.hpp  center_of_mass.hpp  chromosome.hpp  cpp_manager.hpp  cpp_worker.hpp  geometric_transformations.hpp  mutate.hpp  random_generator.hpp  trilinear_interpolation.hpp  virtual_screen.hpp  weed_bonds.hpp
mudock/include/mudock/cpp_kernels/: cpp_worker.hpp  virtual_screen.hpp
mudock/include/mudock/cuda_implementation/: calc_energy.cuh  cuda_check_error_macro.cuh  cuda_manager.hpp  cuda_object.cuh  cuda_random.cuh  cuda_worker.hpp  cuda_wrapper.cuh  evaluate_fitness.cuh  geometric_transformations.cuh  map_textures.cuh  mutate.cuh  virtual_screen.cuh
mudock/include/mudock/cuda_kernels/: cuda_batch_sizer.cuh  cuda_check_error_macro.cuh  cuda_object.cuh  cuda_worker.hpp  cuda_wrapper.cuh  virtual_screen.cuh
mudock/include/mudock/devices/: buffer.hpp  context.hpp  device_contexts.hpp  device_kernels.hpp  device_parsers.hpp  device_types.hpp  kernel.hpp  kernel_types.hpp  language_types.hpp  molecules.hpp  parser.hpp  scratch.hpp
mudock/include/mudock/devices/cpp/: context.hpp  cpp_context.hpp  cpp_kernels.hpp  cpp_molecules.hpp  kernel.hpp  scratch.hpp
mudock/include/mudock/format/: concept.hpp  dot.hpp  mol2.hpp  pdb.hpp  rdkit_wrapper.hpp
mudock/include/mudock/grid/: grid_map.hpp  mdindex.hpp  mdvector.hpp  pi.hpp  point3D.hpp  precompute.hpp  space_grid.hpp
mudock/include/mudock/hip_implementation/: calc_energy.hpp  evaluate_fitness.hpp  geometric_transformations.hpp  hip_batch_sizer.hpp  hip_check_error_macro.hpp  hip_manager.hpp  hip_object.hpp  hip_random.hpp  hip_worker.hpp  hip_wrapper.hpp  mutate.hpp  virtual_screen.hpp
mudock/include/mudock/kernels/: calc_energy_cpp.hpp
mudock/include/mudock/molecule/: atom_coordinates.hpp  atoms.hpp  bond.hpp  constraints.hpp  containers.hpp  fragments.hpp  graph.hpp  properties.hpp  property_table.hpp
mudock/include/mudock/omp_implementation/: calc_energy.hpp  evaluate_fitness.hpp  geometric_transformations.hpp  mutate.hpp  omp_manager.hpp  omp_object.hpp  omp_random.hpp  omp_worker.hpp  omp_wrapper.hpp  virtual_screen.hpp
mudock/include/mudock/parallel/: reorder_buffer.hpp  safe_stack.hpp
mudock/include/mudock/sycl_implementation/: calc_energy.hpp  evaluate_fitness.hpp  geometric_transformations.hpp  mutate.hpp  sycl_manager.hpp  sycl_object.hpp  sycl_random.hpp  sycl_worker.hpp  sycl_wrapper.hpp  virtual_screen.hpp
mudock/src/: log.cpp  molecule.cpp
mudock/src/chem/: assign_autodock_babel_types.cpp  assign_autodock_types.cpp  autodock_babel_types.cpp  autodock_protein.cpp  autodock_types.cpp  bond_types.cpp  elements.cpp
mudock/src/compute/: parse_ids.cpp  reorder_buffer.cpp
mudock/src/controllers/: cpp_manager.cpp  cpp_thread_pool.cpp
mudock/src/cpp_implementation/: calc_energy_cpp.cpp  chromosome.cpp  cpp_manager.cpp  cpp_worker.cpp  geometric_transformations.cpp  mutate.cpp  virtual_screen.cpp  weed_bonds.cpp
mudock/src/cpp_kernels/: cpp_manager.cpp  cpp_worker.cpp  virtual_screen.cpp
mudock/src/cuda_implementation/: calc_energy.cu  cuda_batch_sizer.cu  cuda_manager.cpp  cuda_object.cu  cuda_random.cu  cuda_worker.cpp  evaluate_fitness.cu  geometric_transformations.cu  mutate.cu  virtual_screen.cpp  virtual_screen.cu  virtual_screen_transpilation.cpp
mudock/src/cuda_kernels/: cuda_batch_sizer.cu  cuda_manager.cpp  cuda_worker.cpp  virtual_screen.cu
mudock/src/devices/: device_parsers.cpp  device_types.cpp  kernel_types.cpp  language_types.cpp  parser.cpp
mudock/src/devices/cpp/: context.cpp  cpp_context.cpp  cpp_kernels.cpp  kernel.cpp
mudock/src/format/: dot.cpp  mol2.cpp  rdkit_wrapper.cpp
mudock/src/grid/: grid_atom_map.cpp  grid_desolvation_map.cpp  grid_electrostatic_map.cpp
mudock/src/hip_implementation/: evaluate_fitness.cpp  hip_batch_sizer.cpp  hip_manager.cpp  hip_random.cpp  hip_worker.cpp  virtual_screen.cpp
mudock/src/kernels/: calc_energy_cpp.cpp
mudock/src/molecule/: atom_coordinates.cpp  atoms.cpp  fragments.cpp  graph.cpp  property_table.cpp
mudock/src/omp_implementation/: calc_energy.cpp  evaluate_fitness.cpp  geometric_transformations.cpp  mutate.cpp  omp_batch_sizer.cpp  omp_manager.cpp  omp_random.cpp  omp_worker.cpp  virtual_screen.cpp
mudock/src/parallel/: reorder_buffer.cpp
mudock/src/sycl_implementation/: sycl_batch_sizer.cpp  sycl_manager.cpp  sycl_random.cpp  sycl_worker.cpp  virtual_screen.cpp
polygeist/: Makefile
polygeist/src/: cuda_batch_sizer.cu  cuda_object.cpp  cuda_object.cu  cuda_object_clang.cu  cuda_object_cpp.cpp  set_device.cpp  virtual_screen.cu  virtual_screen_transpilation.cpp
script/: beautify.sh
script/source_generation/: AD4_force_field.py  AD4_parameters.py  generate_autodock_babel_typing.py  generate_autodock_parameters.py  generate_autodock_typing.py  (+2 more)
(+14 files in other folders)
